# fitsviz

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/: workflows
fitsviz/: __init__.py  __main__.py
fitsviz/detection/: __init__.py  ap_photometry.py  core.py
fitsviz/tests/: test_ap_photometry.py  test_utils.py
fitsviz/utils/: __init__.py  cutils.py  dask_utils.py
fitsviz/viz/: __init__.py  plot_bokeh.py  plot_matplotlib.py
